[package]
name = "conqwest"
version = "0.1.0"
authors = ["Colum McGaley <colum@volf.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"     # logging
consul = "0.3"  # consul library
rand = "0.7"    # random functions, used to shuffle results from consul
reqwest = { version = "0.10", features = ["blocking", "json"] }
#tokio = { version = "0.2" }